kubernetes/apps/database/minio/app/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${APP}
  annotations:
    reloader.stakater.com/auto: "true"
    kubernetes.io/ingress.class: internal
    external-dns.alpha.kubernetes.io/target: "${INTERNAL_DOMAIN}"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${APP}.${ROOT_DOMAIN}`)
      kind: Rule
      services:
        - name: ${APP}-console
          port: https-console
          passHostHeader: true
    - match: Host(`s3.${ROOT_DOMAIN}`) || Host(`*.s3.${ROOT_DOMAIN}`)
      kind: Rule
      services:
        - name: minio
          port: https-minio
          passHostHeader: true
    - match: Host(`sss.${ROOT_DOMAIN}`) || Host(`*.sss.${ROOT_DOMAIN}`)
      kind: Rule
      services:
        - name: minio
          port: https-minio
          passHostHeader: true
      middlewares:
        - name: strip-query-string
          namespace: network
